# libscaff

./: libscaffold.spec
.gear/: rules
SRPMS.hasher/: libscaffold-0.0.1-alt1.src.rpm
libscaffold/: .gitignore  Makefile.am  configure.ac  libscaffold.pc.in  scaffold.c  scaffold.h
x86_64/RPMS.hasher/: libscaffold-0.0.1-alt1.x86_64.rpm  libscaffold-debuginfo-0.0.1-alt1.x86_64.rpm  libscaffold-devel-0.0.1-alt1.x86_64.rpm
